--- a/app/templates/lecturer/lecturerTimetable.html
+++ b/app/templates/lecturer/lecturerTimetable.html
@@ -6,50 +6,52 @@
     <h2>My Teaching Timetable</h2>
 
     <div class="timetable-container">
-        <!-- Header Row -->
+        <!-- Header Row: Days (X-axis) -->
         <div class="timetable-row timetable-header">
-            <div class="timetable-day-label">Date / Time</div>
-            {% for hour in range(7, 24) %}
-                <div class="timetable-hour">{{ "%02d:00"|format(hour) }}</div>
+            <div class="timetable-time-label">Time / Day</div>
+            {% set days = ["MON", "TUE", "WED", "THU", "FRI"] %}
+            {% for day in days %}
+                <div class="timetable-day">{{ day }}</div>
             {% endfor %}
         </div>
 
-        {% set days = ["MON", "TUE", "WED", "THU", "FRI"] %}
-        {% for day in days %}
+        <!-- Rows for Time (Y-axis) -->
+        {% for hour in range(7, 24) %}
             <div class="timetable-row">
-                <div class="timetable-day-label">{{ day }}</div>
-                <div class="timetable-day">
-                    {% for row in timetable_rows %}
-                        {% if row.classDay|upper == day %}
-                            {% set start_hour = row.classTime.split('-')[0].split(':')[0] | int %}
-                            {% set end_hour = row.classTime.split('-')[1].split(':')[0] | int %}
-                            {% set start_minute = row.classTime.split('-')[0].split(':')[1] | int %}
-                            {% set end_minute = row.classTime.split('-')[1].split(':')[1] | int %}
+                <div class="timetable-time-label">{{ "%02d:00"|format(hour) }}</div>
 
-                            {% set start_decimal = start_hour + (start_minute / 60) %}
-                            {% set end_decimal = end_hour + (end_minute / 60) %}
-                            {% set total_hours = 17 %}
-
-                            {% set left_percent = ((start_decimal - 7) / total_hours) * 100 %}
-                            {% set width_percent = ((end_decimal - start_decimal) / total_hours) * 100 %}
-
-                            <div class="class-block" style="left: {{ left_percent }}%; width: {{ width_percent }}%;">
-                                <strong>{{ row.courseName }}</strong><br>
-                                [{{ row.classType }}]<br>
-                                <i>{{ row.classRoom }}</i><br>
-                                <span>{{ row.classTime }}</span><br>
-                                <hr style="margin: 4px 0;">
-                                <div class="course-details">
-                                    {% for i in range(row.courseIntakes|length) %}
-                                        <small>
-                                            {{ row.courseIntakes[i] }} | {{ row.courseCodes[i] }} | {{ row.courseSections[i] }}
-                                        </small><br>
-                                    {% endfor %}
-                                </div>
-                            </div>
-                        {% endif %}
-                    {% endfor %}
-                </div>
+                {% for day in days %}
+                    <div class="timetable-cell">
+                        {% for row in timetable_rows %}
+                            {% if row.classDay|upper == day %}
+                                {% set start_hour = row.classTime.split('-')[0].split(':')[0] | int %}
+                                {% set end_hour = row.classTime.split('-')[1].split(':')[0] | int %}
+                                {% set start_minute = row.classTime.split('-')[0].split(':')[1] | int %}
+                                {% set end_minute = row.classTime.split('-')[1].split(':')[1] | int %}
+                                
+                                {% set start_decimal = start_hour + (start_minute / 60) %}
+                                {% set end_decimal = end_hour + (end_minute / 60) %}
+                                
+                                {% if hour >= start_hour and hour < end_hour %}
+                                    <div class="class-block">
+                                        <strong>{{ row.courseName }}</strong><br>
+                                        [{{ row.classType }}]<br>
+                                        <i>{{ row.classRoom }}</i><br>
+                                        <span>{{ row.classTime }}</span><br>
+                                        <hr style="margin: 4px 0;">
+                                        <div class="course-details">
+                                            {% for i in range(row.courseIntakes|length) %}
+                                                <small>
+                                                    {{ row.courseIntakes[i] }} | {{ row.courseCodes[i] }} | {{ row.courseSections[i] }}
+                                                </small><br>
+                                            {% endfor %}
+                                        </div>
+                                    </div>
+                                {% endif %}
+                            {% endif %}
+                        {% endfor %}
+                    </div>
+                {% endfor %}
             </div>
         {% endfor %}
     </div>
