--- a/app/templates/lecturer/lecturerTimetable.html
+++ b/app/templates/lecturer/lecturerTimetable.html
@@ -37,7 +37,7 @@
                                     <div class="class-block">
                                         <strong>{{ row.courseName }}</strong><br>
                                         [{{ row.classType }}]<br>
-                                        <i>{{ row.classRoom }}</i><span>{{ row.classTime }}</span>
+                                        <i>{{ row.classRoom }}</i> | <span>{{ row.classTime }}</span>
                                         <hr>
                                         <div class="course-details">
                                             {% for i in range(row.courseIntakes|length) %}
