--- a/app/templates/lecturer/lecturerTimetable.html
+++ b/app/templates/lecturer/lecturerTimetable.html
@@ -25,10 +25,13 @@
                 {% set has_class = false %}
                 {% for row in timetable_rows %}
                     {% if row.classDay|upper == day %}
-                        {% set start_hour = row.classTime.split('-')[0].split(':')[0] | int %}
+                        {% set start_time, end_time = row.classTime.split('-') %}
+                        {% set start_hour = start_time.split(':')[0] | int %}
+                        {% set end_hour = end_time.split(':')[0] | int %}
+                        {% set duration = end_hour - start_hour %}
                         {% if hour == start_hour %}
                             {% set has_class = true %}
-                            <div class="class-block">
+                            <div class="class-block" style="height: calc(60px * {{ duration }});">
                                 <strong>{{ row.courseName }}</strong><br>
                                 [{{ row.classType }}]<br>
                                 <i>{{ row.classRoom }}</i> | <span>{{ row.classTime }}</span>
@@ -46,7 +49,7 @@
                 {% endfor %}
                 
                 {% if not has_class %}
-                    <div style="height: auto; min-height: 40px;"></div>
+                    <div class="empty-slot"></div>
                 {% endif %}
             </div>
             {% endfor %}
